# create-gin-app

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  docker-compose.yml  dockercmd.sh  env.sh  go.mod  go.sum  main.go
conf/: app.conf
controllers/: common.go  image.go  role.go  user.go
docs/: docs.go  swagger.json  swagger.yaml
hswrapper/: CMakeLists.txt  common  face_packets.h  gst_videowriter_interface.h  gst_webrtc_interface.h  hobot_ipc_client_interface.h  hsfe_interface.h  hsfe_types.h  hsfe_wrapper.cpp  hsfe_wrapper.h  hsrtmp_interface.h  hsvd_interface.h
middlelayer/: dataType.go  deviceStatus.go  init.go  middlelayer.go  middlelayerc.c  middlelayerc.h  stream.go  videoRecord.go  webrtc.go  webrtcVideoSource.go
middleware/auth/: auth.go  jwt.go
models/: init.go  role.go  user.go
pkg/code/: code.go
pkg/config/: conf.go
pkg/errorcode/: code.go
pkg/logger/: log.go
restapi/: HrzDs.go  HrzService.go
routers/: init_func.go  router.go
tools/: argos.go  httpMethords.go  mqtt.go  serial.go  tools.go  welcome.go
