cmake_minimum_required(VERSION 2.8)
project(eme)

message("embed_platform on")
set(EMBED_PLATFORM on)
set(LIB_DIR "lib/aarch64")

set(TARGET_NAME ${PROJECT_NAME})
set(PACKAGE "${TARGET_NAME}")
set(CPACK_GENERATOR "DEB")
set(CPACK_PACKAGE_NAME "${PACKAGE}")
set(CPACK_PACKAGE_VERSION_MAJOR "1")
set(CPACK_PACKAGE_VERSION_MINOR "0")
set(CPACK_PACKAGE_VERSION_PATCH "0530")

set(CPACK_PACKAGE_VERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")

set(CPACK_PACKAGE_FILE_NAME ${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_PROCESSOR})
set(VERSION "${CPACK_PACKAGE_VERSION}")

install(FILES ${CMAKE_SOURCE_DIR}/eme DESTINATION  /usr/local/eme/bin
    PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ)
install(DIRECTORY ${CMAKE_SOURCE_DIR}/docs/ DESTINATION  /usr/local/eme/bin/docs
install(DIRECTORY ${CMAKE_SOURCE_DIR}/build/  DESTINATION  /usr/local/eme/bin/build)
install(DIRECTORY ${CMAKE_SOURCE_DIR}/${LIB_DIR}  DESTINATION  /usr/local/eme/bin/lib)
install(FILES ${CMAKE_SOURCE_DIR}/conf/app.conf  DESTINATION  /usr/local/eme/bin/conf RENAME app.conf)

include(CPack)
